# lookout

./: .gitignore  CHANGELOG.md  README.md  architecture.md  cliff.toml  docker-compose.yml  install.sh  requirements.md
.claude/: settings.local.json
.github/workflows/: release.yml
agent/: Dockerfile  pyproject.toml
agent/lookout_agent/: __main__.py
agent/lookout_agent/collectors/: containers.py
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: metrics.py  services.py  ws.py
backend/app/application/: evaluate_alerts.py  ingest_push_metrics.py  run_blackbox_probe.py
backend/app/domain/: models.py
backend/app/domain/alerting/: events.py  sliding_window.py  state_machine.py  thresholds.py
backend/app/domain/ports/: event_publisher.py  metric_repository.py  notifier.py  service_repository.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/repositories/: pg_metric_repository.py  (+1 more)
backend/app/infrastructure/notifiers/: noop_notifier.py  webhook_discord.py
backend/app/infrastructure/prober/: http_tcp_prober.py  scheduler.py
backend/app/infrastructure/ws/: hub.py
backend/tests/unit/: test_state_machine.py
docker/caddy/: Caddyfile
docker/db/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  scroll-area.tsx
frontend/src/types/: lookout.ts
