[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookout-agent"
version = "0.1.0"
description = "Lightweight push agent for the Lookout monitoring platform"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "docker>=7.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.scripts]
lookout-agent = "lookout_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lookout_agent*"]
